# arch-pkg-db

./: Cargo.toml  README.md  check-all.bash
.github/workflows/: test.yaml
examples/: archives_single.rs  eager_query_db_local.rs  eager_query_db_sync.rs  eager_single.rs  memo_query_db_local.rs  memo_single.rs  parse_eager_query_db.rs  parse_eager_query_db_local.rs  parse_eager_query_db_sync.rs  providers_multi.rs  providers_single.rs  query_providers_using_single_db.rs
src/: attached.rs  db.rs  lib.rs  misc.rs  multi.rs  single.rs  text.rs
src/attached/: into.rs  pkg.rs  utils.rs
src/db/: attached.rs  pointer.rs
src/desc/value/: repository.rs
src/misc/: attachment.rs  text.rs
src/misc/attachment/: desc.rs  utils.rs
src/multi/: combine.rs  extend.rs  get.rs  insert.rs  iter.rs  latest.rs  new.rs  providers.rs  query.rs  repository.rs  text.rs
src/multi/combine/: into.rs
src/multi/iter/: entries.rs  from.rs  owned.rs  queriers.rs  repositories.rs
src/multi/query/: extend.rs  get.rs  insert.rs  iter.rs  latest.rs  lookup.rs  misc.rs  new.rs  providers.rs
src/multi/query/iter/: entries.rs  from.rs  names.rs  owned.rs  queriers.rs  repositories.rs
src/multi/text/: extend.rs  insert.rs  iter.rs  misc.rs  new.rs  parse.rs
src/multi/with/: utils.rs
src/single/: archive.rs  extend.rs  get.rs  insert.rs  misc.rs  parsed.rs  providers.rs  query.rs  text.rs
src/single/archive/: convert.rs  insert.rs  misc.rs  new.rs  tar.rs  tgz.rs  txz.rs
src/single/iter/: entry.rs  from.rs  names.rs  owned.rs  queriers.rs
src/single/parsed/: add.rs  db.rs  desc_file.rs  get.rs  new.rs
src/single/query/: add.rs  db.rs  extend.rs  get.rs  insert.rs  iter.rs  lookup.rs  new.rs  providers.rs
src/single/query/iter/: entries.rs  from.rs  names.rs  owned.rs  queriers.rs
src/single/query/list/: entries.rs  names.rs  queriers.rs
src/single/text/: archive.rs  convert.rs  extend.rs  insert.rs  item.rs  iter.rs  local.rs  misc.rs  parse.rs  tar.rs  tgz.rs  txz.rs
src/single/text/archive/: gz.rs  mime.rs  tar.rs  uncompressed.rs  xz.rs
src/text/: archive.rs  item.rs  local.rs  multi.rs  single.rs
src/text/archive/: gz.rs  mime.rs  tar.rs  uncompressed.rs  xz.rs
src/text/multi/: collect.rs  extend.rs  insert.rs  iter.rs  misc.rs  new.rs  parse.rs
src/text/single/: collect.rs  extend.rs  insert.rs  iter.rs  local.rs  misc.rs  new.rs  parse.rs
src/value/: repository.rs
tests/: _utils.rs  archive.rs  local.rs  multi_eager.rs  multi_eager_latest.rs  multi_eager_query_db.rs  multi_memo.rs  multi_memo_latest.rs  single_eager.rs  single_eager_query_db.rs  single_memo.rs  single_memo_query_db.rs
tests/fixtures/: bash-completion.desc
utils/: Cargo.toml  archive.rs  fixtures.rs  lib.rs  temp.rs
utils/fixtures/: bash.rs  core.rs  derivative.rs  endeavouros.rs  extra.rs  khai.rs  personal.rs
utils/fixtures/archives/: official.rs
utils/fixtures/core/: bash.desc  glibc.desc  ncurses.desc  pacman.desc  readline.desc
utils/fixtures/derivative/: paru.desc
utils/fixtures/extra/: parallel-disk-usage.desc  rust.desc  rustup.desc
utils/fixtures/khai/: parallel-disk-usage.desc  paru.desc
utils/fixtures/personal/: parallel-disk-usage.desc  paru.desc
