[package]
name = "arch-pkg-db"
description = "Pure Rust library to read Arch Linux's package database archives"
version = "0.0.0"
edition = "2024"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
repository = "https://github.com/pacman-repo-builder/arch-pkg-db.git"
#readme = "README.md"
include = [
  "/src",
  "/Cargo.toml",
  #"/README.md",
  "/LICENSE.md",
]
keywords = [
  "pure-rust",
  "database",
  "archlinux",
  "pacman",
  "no-libalpm",
]
categories = []

[features]
default = []
parking_lot = ["arch-pkg-text/parking_lot"]

[dependencies]
arch-pkg-text = "0.9.5"
derive_more = { version = "2.0.1", default-features = false, features = ["as_ref", "deref", "deref_mut", "display", "error", "from", "into"] }
infer = "0.19.0"
libflate = "2.1.0"
lzma-rs = "0.3.0"
is_type = "0.2.1"
itertools = "0.14.0"
pipe-trait = "0.4.0"
rayon = "1.10.0"
strum = { version = "0.27.1", features = ["phf"] }
tar = "0.4.44"

[dev-dependencies]
build-fs-tree = "0.7.1"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
rand = "0.9.0"
